banking-app-k8s/gateway/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: gateway

  namespace: banking-app-dev

spec:

  type: ClusterIP

  selector:
    app: gateway

  ports:

  - port: 5000

    targetPort: 5000

    protocol: TCP
