banking-app-k8s/gateway/gateway-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: gateway-egress
  namespace: banking

spec:

  podSelector:
    matchLabels:
      app: gateway

  policyTypes:

    - Egress

  egress:

    - to:

        - podSelector:
            matchLabels:
              app: auth-service

        - podSelector:
            matchLabels:
              app: offers-service

        - podSelector:
            matchLabels:
              app: services-service
